text alignment fix

--- a/scss/sections/banner-featured-products.scss
+++ b/scss/sections/banner-featured-products.scss
@@ -58,9 +58,6 @@
             grid-auto-rows: minmax(460px, auto);
         }
         :--text-wrapper{
-            top: 50%;
-            bottom: 0;
-            transform: translateY(-25%);
             .sidebar-banner__eyebrow{
                 font-size: $body-alt-size;
             }
